--- a/Coltoi_Iustin_Lab5/MainWindow.xaml
+++ b/Coltoi_Iustin_Lab5/MainWindow.xaml
@@ -6,23 +6,32 @@
         xmlns:local="clr-namespace:Coltoi_Iustin_Lab5"
         xmlns:AutoLotModel="clr-namespace:AutoLotModel;assembly=AutoLotModel" x:Class="Coltoi_Iustin_Lab5.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded_1">
+        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
     <Window.Resources>
         <CollectionViewSource x:Key="customerViewSource" d:DesignSource="{d:DesignInstance {x:Type AutoLotModel:Customer}, CreateList=True}"/>
         <CollectionViewSource x:Key="inventoryViewSource" d:DesignSource="{d:DesignInstance {x:Type AutoLotModel:Inventory}, CreateList=True}"/>
+        <CollectionViewSource x:Key="customerOrdersViewSource" Source="{Binding Orders, Source={StaticResource customerViewSource}}"/>
     </Window.Resources>
     <Grid>
-        <TabControl x:Name="tbCtrlAutoLot" HorizontalAlignment="Left" Height="348" Margin="34,38,0,0" VerticalAlignment="Top" Width="728">
+        <TabControl x:Name="tbCtrlAutoLot" HorizontalAlignment="Left" Height="348" Margin="168,38,0,0" VerticalAlignment="Top" Width="594">
             <TabItem Header="Customers">
-                <Grid Background="#FFE5E5E5" DataContext="{StaticResource customerViewSource}">
-                    <DataGrid x:Name="customerDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="250,31,72.4,155" RowDetailsVisibilityMode="VisibleWhenSelected">
+                <Grid Background="#FFE5E5E5" DataContext="{StaticResource customerViewSource}" Margin="0,2,0.4,-2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="97*"/>
+                        <ColumnDefinition Width="490*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="11*"/>
+                        <RowDefinition Height="5*"/>
+                    </Grid.RowDefinitions>
+                    <DataGrid x:Name="customerDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="46.8,21,146.6,65" RowDetailsVisibilityMode="VisibleWhenSelected" Grid.Column="1" >
                         <DataGrid.Columns>
                             <DataGridTextColumn x:Name="custIdColumn" Binding="{Binding CustId}" Header="Cust Id" Width="SizeToHeader"/>
                             <DataGridTextColumn x:Name="firstNameColumn" Binding="{Binding FirstName}" Header="First Name" Width="SizeToHeader"/>
                             <DataGridTextColumn x:Name="lastNameColumn" Binding="{Binding LastName}" Header="Last Name" Width="SizeToHeader"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <Grid x:Name="grid1" HorizontalAlignment="Left" Margin="250,198,0,0" VerticalAlignment="Top">
+                    <Grid x:Name="grid1" HorizontalAlignment="Left" Margin="46.8,201,0,0" VerticalAlignment="Top" Grid.RowSpan="2" Grid.Column="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
@@ -39,13 +48,8 @@
                         <Label Content="Last Name:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="2" VerticalAlignment="Center"/>
                         <TextBox x:Name="lastNameTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="2" Text="{Binding LastName, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120"/>
                     </Grid>
-                    <Button x:Name="btnNewCustomers" Content="New" HorizontalAlignment="Left" Margin="38,43,0,0" VerticalAlignment="Top" Width="75"/>
-                    <Button x:Name="btnEditCustomers" Content="Edit" HorizontalAlignment="Left" Margin="38,89,0,0" VerticalAlignment="Top" Width="75"/>
-                    <Button x:Name="btnDeleteCustomers" Content="Delete" HorizontalAlignment="Left" Margin="38,136,0,0" VerticalAlignment="Top" Width="75"/>
-                    <Button x:Name="btnSaveCustomers" Content="Save" HorizontalAlignment="Left" Margin="38,219,0,0" VerticalAlignment="Top" Width="75"/>
-                    <Button x:Name="btnCancelCustomers" Content="Cancel" HorizontalAlignment="Left" Margin="38,254,0,0" VerticalAlignment="Top" Width="75"/>
-                    <Button x:Name="btnPrevCustomers" Content="Previous" HorizontalAlignment="Left" Margin="250,170,0,0" VerticalAlignment="Top" Width="75"/>
-                    <Button x:Name="btnNextCustomers" Content="Next" HorizontalAlignment="Left" Margin="575,170,0,0" VerticalAlignment="Top" Width="75"/>
+                    <Button x:Name="btnPrevCustomers" Content="Previous" HorizontalAlignment="Left" Margin="46.8,160,0,0" VerticalAlignment="Top" Width="75" Click="btnPrevCustomers_Click" Grid.Column="1"/>
+                    <Button x:Name="btnNextCustomers" Content="Next" HorizontalAlignment="Left" Margin="268.8,160,0,0" VerticalAlignment="Top" Width="75" Click="btnNextCustomers_Click" Grid.Column="1"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Inventory">
@@ -54,14 +58,14 @@
                         <ColumnDefinition Width="0*"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <DataGrid x:Name="inventoryDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="237,32,67.4,163" RowDetailsVisibilityMode="VisibleWhenSelected" Grid.Column="1">
+                    <DataGrid x:Name="inventoryDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="141,32,163,163" RowDetailsVisibilityMode="VisibleWhenSelected" Grid.Column="1">
                         <DataGrid.Columns>
                             <DataGridTextColumn x:Name="carIdColumn" Binding="{Binding carId}" Header="car Id" Width="SizeToHeader"/>
                             <DataGridTextColumn x:Name="colorColumn" Binding="{Binding Color}" Header="Color" Width="SizeToHeader"/>
                             <DataGridTextColumn x:Name="makeColumn" Binding="{Binding Make}" Header="Make" Width="SizeToHeader"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <Grid x:Name="grid2" Grid.Column="1" HorizontalAlignment="Left" Margin="237,201,0,0" VerticalAlignment="Top" Height="96" Width="175">
+                    <Grid x:Name="grid2" Grid.Column="1" HorizontalAlignment="Left" Margin="141,203,0,0" VerticalAlignment="Top" Height="96" Width="175">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
@@ -78,19 +82,66 @@
                         <Label Content="Make:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="2" VerticalAlignment="Center"/>
                         <TextBox x:Name="makeTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="2" Text="{Binding Make, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120"/>
                     </Grid>
-                    <Button x:Name="btnEditInventory" Content="Edit" HorizontalAlignment="Left" Margin="27,91,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="19"/>
-                    <Button x:Name="btnDeleteInventory" Content="Delete" HorizontalAlignment="Left" Margin="27,129,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="19"/>
-                    <Button x:Name="btnPrevInventory" Content="Previous" Grid.Column="1" HorizontalAlignment="Left" Margin="237,162,0,0" VerticalAlignment="Top" Width="75" Height="19"/>
-                    <Button x:Name="btnNextInventory" Content="Next" Grid.Column="1" HorizontalAlignment="Left" Margin="580,162,0,0" VerticalAlignment="Top" Width="75" Height="19"/>
-                    <Button x:Name="btnSaveInventory" Content="Save" HorizontalAlignment="Left" Margin="27,219,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="19"/>
-                    <Button x:Name="btnCancelInventory" Content="Cancel" HorizontalAlignment="Left" Margin="27,252,0,0" VerticalAlignment="Top" Width="75" Grid.Column="1" Height="19"/>
-                    <Button x:Name="btnNewInventory" Grid.ColumnSpan="2" Content="New" HorizontalAlignment="Left" Margin="27,52,0,0" VerticalAlignment="Top" Width="75"/>
+                    <Button x:Name="btnPrevInventory" Content="Previous" Grid.Column="1" HorizontalAlignment="Left" Margin="141,162,0,0" VerticalAlignment="Top" Width="75" Height="19" Click="btnPrevInventory_Click"/>
+                    <Button x:Name="btnNextInventory" Content="Next" Grid.Column="1" HorizontalAlignment="Left" Margin="350,162,0,0" VerticalAlignment="Top" Width="75" Height="19" Click="btnNextInventory_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Orders">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5" DataContext="{StaticResource customerOrdersViewSource}">
+                    <ComboBox x:Name="cmbCustomers" HorizontalAlignment="Left" Margin="100,52,0,0" VerticalAlignment="Top" Width="120" SelectedValue="{Binding ElementName=ordersDataGrid,Path=SelectedItem.CustId,Mode=OneWay}">>
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock>
+                                    <TextBlock.Text>
+                                        <MultiBinding StringFormat="{}{0} {1}">
+                                            <Binding Path="FirstName"/>
+                                            <Binding Path="LastName"/>
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                    <ComboBox x:Name="cmbInventory" HorizontalAlignment="Left" Margin="374,52,0,0" VerticalAlignment="Top" Width="120" SelectedValue="{Binding ElementName=ordersDataGrid,Path=SelectedItem.CarId,Mode=OneWay}">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock>
+                                    <TextBlock.Text>
+                                        <MultiBinding StringFormat="{}{0} - {1}">
+                                            <Binding Path="Make"/>
+                                            <Binding Path="Color"/>
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                    <TextBlock HorizontalAlignment="Left" Margin="100,25,0,0" TextWrapping="Wrap" Text="Customers" VerticalAlignment="Top" Width="93" Height="22"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="374,25,0,0" TextWrapping="Wrap" Text="Inventory" VerticalAlignment="Top" Width="82"/>
+                    <DataGrid x:Name="ordersDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" RowDetailsVisibilityMode="VisibleWhenSelected" IsSynchronizedWithCurrentItem="True" Margin="100,170,118,40">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn x:Name="FirstNameColumn" Binding="{Binding FirstName}" Header="First Name" Width="SizeToHeader"/>
+                            <DataGridTextColumn x:Name="LastNameColumn" Binding="{Binding LastName}" Header="Last Name" Width="SizeToHeader"/>
+                            <DataGridTextColumn x:Name="MakeColumn" Binding="{Binding Make}" Header="Make" Width="SizeToHeader"/>
+                            <DataGridTextColumn x:Name="ColorColumn" Binding="{Binding Color}" Header="Color" Width="SizeToHeader"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </Grid>
             </TabItem>
         </TabControl>
+        <GroupBox x:Name="gbOperations" Button.Click="gbOperations_Click" Header="" HorizontalAlignment="Left" Height="169" Margin="46,50,0,0" VerticalAlignment="Top" Width="100">
+            <StackPanel HorizontalAlignment="Left" Height="95" Margin="0,66,-2,0" VerticalAlignment="Top" Width="90">
+                <Button x:Name="btnNew" Content="New" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="btnAdd_Click"/>
+                <Button x:Name="btnEdit" Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="btnEditO_Click"/>
+                <Button x:Name="btnDelete" Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="btnDeleteO_Click"/>
+            </StackPanel>
+        </GroupBox>
+        <GroupBox x:Name="gbActions" Header="" HorizontalAlignment="Left" Height="100" Margin="46,266,0,0" VerticalAlignment="Top" Width="100">
+            <StackPanel HorizontalAlignment="Left" Height="74" VerticalAlignment="Top" Width="90" Margin="0,0,-2,0">
+                <Button x:Name="btnSave" Content="Save" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="btnSave_Click"/>
+                <Button x:Name="btnCancel" Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="btnCancel_Click"/>
+            </StackPanel>
+        </GroupBox>
 
     </Grid>
 </Window>
